--- a/website/package.json
+++ b/website/package.json
@@ -1,18 +1,20 @@
 {
-  "scripts": {
-    "examples": "docusaurus-examples",
-    "start": "docusaurus-start",
-    "build": "docusaurus-build",
-    "publish-gh-pages": "docusaurus-publish",
-    "write-translations": "docusaurus-write-translations",
-    "version": "docusaurus-version",
-    "rename-version": "docusaurus-rename-version"
-  },
-  "devDependencies": {
-    "docusaurus": "^1.14.4"
-  },
-  "dependencies": {
-    "json": "^9.0.6",
-    "package.json": "^2.0.1"
-  }
+    "scripts": {
+        "examples": "docusaurus-examples",
+        "start": "docusaurus-start",
+        "build": "docusaurus-build",
+        "publish-gh-pages": "docusaurus-publish",
+        "write-translations": "docusaurus-write-translations",
+        "crowdin-upload": "crowdin --config ../crowdin.yaml upload sources --auto-update -b master",
+        "crowdin-download": "crowdin --config ../crowdin.yaml download -b master",
+        "version": "docusaurus-version",
+        "rename-version": "docusaurus-rename-version"
+    },
+    "devDependencies": {
+        "docusaurus": "^1.14.4"
+    },
+    "dependencies": {
+        "json": "^9.0.6",
+        "package.json": "^2.0.1"
+    }
 }
