--- a/website/package.json
+++ b/website/package.json
@@ -11,7 +11,9 @@
         "rename-version": "docusaurus-rename-version"
     },
     "devDependencies": {
-        "docusaurus": "^0.0.2"
+        "@babel/runtime-corejs3": "^7.17.8",
+        "core-js": "^3.21.1",
+        "docusaurus": "^1.14.7"
     },
     "dependencies": {
         "json": "^11.0.0",
